--- a/docproject/src/app/pages/table/table.component.html
+++ b/docproject/src/app/pages/table/table.component.html
@@ -2,27 +2,27 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    <ng-container matColumnDef="userId">
+      <th mat-header-cell *matHeaderCellDef> userId </th>
+      <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
     </ng-container>
   
     <!-- Name Column -->
-    <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
   
     <!-- Origem Column -->
-    <ng-container matColumnDef="origem">
-      <th mat-header-cell *matHeaderCellDef> Origem </th>
-      <td mat-cell *matCellDef="let element"> {{element.origem}} </td>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef> title </th>
+      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
     </ng-container>
   
     <!-- Idade Column -->
-    <ng-container matColumnDef="idade">
-      <th mat-header-cell *matHeaderCellDef> Idade </th>
-      <td mat-cell *matCellDef="let element"> {{element.idade}} </td>
+    <ng-container matColumnDef="body">
+      <th mat-header-cell *matHeaderCellDef> body </th>
+      <td mat-cell *matCellDef="let element"> {{element.body}} </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
