--- a/docproject/src/app/app.component.html
+++ b/docproject/src/app/app.component.html
@@ -1,3 +1,42 @@
-<app-table></app-table>
+<!DOCTYPE html>
+<html lang="en">
 
-<app-form></app-form>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img class="logoImg" src="../assets/img/dog-icon-4.jpg" alt="">
+                <h2 class="logoTitle">DOG CARE</h2>
+            </div>
+            <nav>
+                <a href="#">HOME</a>
+                <a href="#">ABOUT-US</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="capa-principal">
+        </div>
+    </main>
+
+    <div class="content">
+        <div class="table">
+            <app-table></app-table>
+        </div>
+        <div class="form">
+            <app-form></app-form>
+        </div>
+    </div>
+
+
+</body>
+
+</html>
