--- a/docproject/src/app/pages/form/form.component.scss
+++ b/docproject/src/app/pages/form/form.component.scss
@@ -1,8 +1,34 @@
 *{
-    margin-left: 10px;
-    display: flex;
-    flex-direction: column;
-
-    width: 50%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+.content{
+    margin: 20px;
+    //background-color: blue;
+}
+
+.fields{
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    //background-color: yellow;
+}
+
+.form{
+    width: 100%;
+    display: flex;
+    //background-color: red;
+}
+
+.actions{
+    display: flex;
+    justify-content: space-around;
+    padding: 25px;
+    //background-color: rosybrown;
+}
+
+.title h1{
+    font-family:Arial, Helvetica, sans-serif
+}
