--- a/docproject/src/app/pages/table/table.component.html
+++ b/docproject/src/app/pages/table/table.component.html
@@ -1,32 +1,48 @@
-<router-outlet>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="content">
 
-    <!-- ID Column -->
-    <ng-container matColumnDef="userId">
-      <th mat-header-cell *matHeaderCellDef> userId </th>
-      <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-  
-    <!-- Origem Column -->
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> title </th>
-      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-    </ng-container>
-  
-    <!-- Idade Column -->
-    <ng-container matColumnDef="body">
-      <th mat-header-cell *matHeaderCellDef> body </th>
-      <td mat-cell *matCellDef="let element"> {{element.body}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
-</router-outlet>
+  <div class="title">
+    <h1>DOG LIST</h1>
+  </div>
+
+  <div class="crud">
+    <button class="btn" type="submit">update</button>
+    <button class="btn" type="submit">delete</button>
+  </div>
+
+  <div class="table">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="userId">
+        <th mat-header-cell *matHeaderCellDef> userId </th>
+        <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> id </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <!-- Origem Column -->
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> title </th>
+        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+      </ng-container>
+
+      <!-- Idade Column -->
+      <ng-container matColumnDef="body">
+        <th mat-header-cell *matHeaderCellDef> body </th>
+        <td mat-cell *matCellDef="let element"> {{element.body}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> body </th>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+
+</div>
